--- a/emnesite.html
+++ b/emnesite.html
@@ -18,11 +18,11 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Tema 2</a>
-          <a href="emnesite.html">Tema 3</a>
-          <a href="spil.html">Tema 4</a>
-          <a href="passion.html">Tema 5 opgave 1</a>
-          <a href="virksomhedsite.html">Tema 5 opgave 2</a>
+          <a href="website.html">Website</a>
+          <a href="emnesite.html">Emnesite</a>
+          <a href="spil.html">Spil</a>
+          <a href="passion.html">Passionsite</a>
+          <a href="virksomhedsite.html">Virksomhedsite</a>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
@@ -35,65 +35,28 @@
     <main>
       <section class="baggrund">
         <h1>Emnesite</h1>
-        <div class="grid_1-1">
-          <div>
-            <h2>Tema</h2>
-            <!-- <p>
-              I Tema 4 blev vi introduceret til User Experience Design (UX), som
-              er en central del af udviklingen af digitale brugergrænseflader
-              (UI).
-            </p> -->
-            <!-- <p>
-              I Tema 4 lærte vi om hele processen med at lavet et fuldendt
-              website fra a til å. Igennem dette tema blev vi introduceret til
-              flere del opgaver idègenerer, designe samt test af website. Denne
-              process var med til at danne rammer om opgaven i tema 5.
-              layoutprincipper: A, B, C (her demonstrerer du viden). Jeg valgte
-              at bruge princip B til at løse den efterfølgende opgave på
-              følgende måde (her demonstrerer du færdighed). Jeg valgte at bruge
-              det princip til min løsning fremfor A & C, fordi [...] (her
-              demonstrerer du kompetence). I Tema Y (link) brugte jeg også
-              layoutprincipper, men jeg gjorde det anderledes.
-            </p> -->
-            <p>
-              I Tema 3 blev vi introduceret til User Experience Design (UX), som
-              er en central del af udviklingen af digitale brugergrænseflader
-              (UI). Dette tema gav en grundlæggende forståelse for samspillet
-              mellem brugere og brugergrænseflader og introducerede teorier,
-              værktøjer og metoder til research, design og test i digital
-              produktudvikling. Temaet havde til formål at give erfaring med
-              udvalgte UX/UI-metoder og lære at præsentere vores design- og
-              udviklingsproces samt formidle research- og testresultater til
-              interessenter.
-            </p>
-          </div>
-          <div>
-            <h3>Opgave</h3>
-            <p>
-              I opgave emnesite var vores mål at lave et fuldendt website, hvor
-              vi var med gennem hele processen. I denne opgave brugte vi vores
-              færdigheder fra tema 2 om HTML og CSS i samspil med metoder til
-              research og design; moodborad, styletile mm. For derefter at teste
-              sitet på både brugere, tænke-højt test, 5 sekunder test samt BERT
-              og på hvordan vores site fungere med Lighthouse test.
-            </p>
-            <!-- <p>
-              redesign for en forbedret brugeroplevelse af løsning Y (viden).
-              Min rolle var [indsæt din hovedrolle og ansvarsområder], som jeg
-              udførte [specifik måde med specifikke værktøjer eller metoder]
-              (færdighed). Det lærte mig vigtigheden af [værktøj/metode], som
-              jeg senere brugte i Opgavebeskrivelse Portfolioeksamen Forår 2024
-              Side 2 af 3 [fremtidigt projekt eller videreudvikling].
-              Udviklingsprocessen kan ses i [illustrationer eller
-              visualiseringer] i figur 1 (kompetence). Det sværeste var [svar],
-              som jeg derfor var ekstra opmærksom på at blive bedre til i
-              [øvelse/opgave/projekt] (link) sidst på semesteret.
-            </p> -->
-            <!-- <p>
-              For at få erfaring med overstående fik vi 4 uger til at lavet et
-              website om et valgfrit emne.
-            </p> -->
-          </div>
+        <div class="baggrund2">
+          <h2>Tema</h2>
+          <p>
+            I Tema 3 blev vi introduceret til User Experience Design (UX), som
+            er en central del af udviklingen af digitale brugergrænseflader
+            (UI). Dette tema gav en grundlæggende forståelse for samspillet
+            mellem brugere og brugergrænseflader og introducerede teorier,
+            værktøjer og metoder til research, design og test i digital
+            produktudvikling. Temaet havde til formål at give erfaring med
+            udvalgte UX/UI-metoder og lære at præsentere vores design- og
+            udviklingsproces samt formidle research- og testresultater til
+            interessenter.
+          </p>
+          <h3>Opgave</h3>
+          <p>
+            I opgave emnesite var vores mål at lave et fuldendt website, hvor vi
+            var med gennem hele processen. I denne opgave brugte vi vores
+            færdigheder fra tema 2 om HTML og CSS i samspil med metoder til
+            research og design; moodborad, styletile mm. For derefter at teste
+            sitet på både brugere, tænke-højt test, 5 sekunder test samt BERT og
+            på hvordan vores site fungere med Lighthouse test.
+          </p>
         </div>
       </section>
       <section class="baggrund1">
@@ -155,6 +118,7 @@
           <div>
             <h4>Se det færdige produkt her:</h4>
             <a
+              class="website"
               href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
               target="_blank"
               >Website <i class="arrow"></i
