--- a/spil.html
+++ b/spil.html
@@ -18,11 +18,11 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Tema 2</a>
-          <a href="emnesite.html">Tema 3</a>
-          <a href="spil.html">Tema 4</a>
-          <a href="passion.html">Tema 5 opgave 1</a>
-          <a href="virksomhedsite.html">Tema 5 opgave 2</a>
+          <a href="website.html">Website</a>
+          <a href="emnesite.html">Emnesite</a>
+          <a href="spil.html">Spil</a>
+          <a href="passion.html">Passionsite</a>
+          <a href="virksomhedsite.html">Virksomhedsite</a>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
@@ -36,35 +36,29 @@
       <section class="baggrund">
         <h1>Spil</h1>
         <div class="baggrund2">
-          <div>
-            <div>
-              <h2>Tema</h2>
-              <p>
-                I dette tema blev vi introduceret til programmeringssproget
-                JavaScript, som kan bruges til at kode dynamiske websites. I
-                dette tema brugte vi JavaScript sammen med CSS-animationer til
-                at skabe et lille spil. Formålet med dette tema var, at vi
-                begynder at arbejde professionelt med formgivning af grafiske
-                elementer. Vi analyserede spildesign og undersøgte, hvordan man
-                engagerer brugere gennem teori og konventioner inden for
-                UI-elementer, figurelementer, baggrundsdesign og
-                kompositionsteknikker. Vi udviklede vores eget spildesign efter
-                moderne konventioner og rentegner grafikken til spillet i Adobe
-                Illustrator. Gennem arbejdet med vores eget spil lærer vi at
-                arbejde med aktivitets- og statemachine-diagrammer, som bruges
-                til at planlægge det mere komplicerede interaktive flow.
-              </p>
-            </div>
-            <div>
-              <h3>Opgave</h3>
-              <p>
-                I denne opgave skulle vi lave et spil som skulle have et koncept
-                og en idé, som vi selv fandt frem til, og selv skulle designe
-                alle elementer og kode spillet helt fra bunden. Dette skulle
-                gøre ved brug af CSS-animation og JavaScript.
-              </p>
-            </div>
-          </div>
+          <h2>Tema</h2>
+          <p>
+            I dette tema blev vi introduceret til programmeringssproget
+            JavaScript, som kan bruges til at kode dynamiske websites. I dette
+            tema brugte vi JavaScript sammen med CSS-animationer til at skabe et
+            lille spil. Formålet med dette tema var, at vi begynder at arbejde
+            professionelt med formgivning af grafiske elementer. Vi analyserede
+            spildesign og undersøgte, hvordan man engagerer brugere gennem teori
+            og konventioner inden for UI-elementer, figurelementer,
+            baggrundsdesign og kompositionsteknikker. Vi udviklede vores eget
+            spildesign efter moderne konventioner og rentegner grafikken til
+            spillet i Adobe Illustrator. Gennem arbejdet med vores eget spil
+            lærer vi at arbejde med aktivitets- og statemachine-diagrammer, som
+            bruges til at planlægge det mere komplicerede interaktive flow.
+          </p>
+
+          <h3>Opgave</h3>
+          <p>
+            I denne opgave skulle vi lave et spil som skulle have et koncept og
+            en idé, som vi selv fandt frem til, og selv skulle designe alle
+            elementer og kode spillet helt fra bunden. Dette skulle gøre ved
+            brug af CSS-animation og JavaScript.
+          </p>
         </div>
       </section>
       <section class="baggrund1">
