--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -19,11 +19,11 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Tema 2</a>
-          <a href="emnesite.html">Tema 3</a>
-          <a href="spil.html">Tema 4</a>
-          <a href="passion.html">Tema 5 opgave 1</a>
-          <a href="virksomhedsite.html">Tema 5 opgave 2</a>
+          <a href="website.html">Website</a>
+          <a href="emnesite.html">Emnesite</a>
+          <a href="spil.html">Spil</a>
+          <a href="passion.html">Passionsite</a>
+          <a href="virksomhedsite.html">Virksomhedsite</a>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
@@ -36,33 +36,29 @@
     <main>
       <section class="baggrund">
         <h1>Virksomhedsite</h1>
-        <div class="grid_1-1">
-          <div>
-            <h2>Tema</h2>
-            <p>
-              I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
-              herunder præproduktion, selve produktionen samt postproduktion. Vi
-              benytter smartphonekameraer til optagelse af video og ekstern lyd
-              og anvender Premiere Pro til redigering. Dette er væsentligt for
-              at kunne lave mindre indholdsproduktioner selv, samt for bedre at
-              kunne kommunikere professionelt med kunder. Vi arbejde også med
-              animeret vektorgrafik (Lottiefiles). Vi bliv introduceret til
-              grundlæggende faglige begreber inden for indholdsproduktion, og vi
-              benyttede derudover de færdigheder, som vi havde fået i de
-              foregående temaer, til at redesigne en virksomhedshjemmeside.
-            </p>
-          </div>
-          <div>
-            <h3>Opgave</h3>
-            <p>
-              I denne opgave skulle vi prøve kræfter med at redesigne en
-              selvvalgt virksomheds website. Redesignet skulle munde ud i et
-              kodet website og indeholde indholdsproduktioner i form af fx
-              tekst, foto, LottieFiles og video. Dette var et gruppeprojekt. Vi
-              var alle indover alle dele af opgaven, men jeg stod for kodningen
-              af indec.html og en del illutations arbejde i Illustrator.
-            </p>
-          </div>
+        <div class="baggrund2">
+          <h2>Tema</h2>
+          <p>
+            I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+            herunder præproduktion, selve produktionen samt postproduktion. Vi
+            benytter smartphonekameraer til optagelse af video og ekstern lyd og
+            anvender Premiere Pro til redigering. Dette er væsentligt for at
+            kunne lave mindre indholdsproduktioner selv, samt for bedre at kunne
+            kommunikere professionelt med kunder. Vi arbejde også med animeret
+            vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
+            faglige begreber inden for indholdsproduktion, og vi benyttede
+            derudover de færdigheder, som vi havde fået i de foregående temaer,
+            til at redesigne en virksomhedshjemmeside.
+          </p>
+          <h3>Opgave</h3>
+          <p>
+            I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
+            virksomheds website. Redesignet skulle munde ud i et kodet website
+            og indeholde indholdsproduktioner i form af fx tekst, foto,
+            LottieFiles og video. Dette var et gruppeprojekt. Vi var alle
+            indover alle dele af opgaven, men jeg stod for kodningen af
+            indec.html og en del illutations arbejde i Illustrator.
+          </p>
         </div>
       </section>
       <section class="baggrund1">
