--- a/website.html
+++ b/website.html
@@ -36,96 +36,59 @@
       <section class="baggrund">
         <h1>Website</h1>
         <!-- <div class="flex"> -->
-        <div class="grid_1-1">
-          <div>
-            <h2>Tema</h2>
-            <p>
-              I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
-              færdigheder brugte vi til først at lave mobilsite, for derefter
-              lav en respontiv website som også fungerede som studiestarts
-              prøve. Derudover blev vi introduceret til de grundlæggende
-              færdigheder i grafisk opsætning af tekst og billeder i Figma, som
-              vi brugte i Tema 3.
-            </p>
-          </div>
-          <div>
-            <h3>Opgave</h3>
-            <p>
-              I website opgaven fik jeg udleveret wireframes, layoutdiagram samt
-              indhold (billede og tekst) til at lave et færdigt responsivt
-              design. Denne opgave skulle bruges til at jeg kunne vise at jeg
-              kunne mestre de grundlæggende færdigheder i HTML og CSS.
-            </p>
-            <!-- <p>
-                I website opgaven lavede jeg et website ud fra udleveret
-                wireframes, layoutsiagrammer samt udleveret indhold (tekst og
-                billede). Dette gjorde jeg ved brug af HTML til at opbygge
-                siden, og CSS til styling og layout.
-              </p> -->
-          </div>
+        <div class="baggrund2">
+          <h2>Tema</h2>
+          <p>
+            I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
+            færdigheder brugte vi til først at lave mobilsite, for derefter lav
+            en respontiv website som også fungerede som studiestarts prøve.
+            Derudover blev vi introduceret til de grundlæggende færdigheder i
+            grafisk opsætning af tekst og billeder i Figma, som vi brugte i Tema
+            3.
+          </p>
+
+          <h3>Opgave</h3>
+          <p>
+            I website opgaven fik jeg udleveret wireframes, layoutdiagram samt
+            indhold (billede og tekst) til at lave et færdigt responsivt design.
+            Denne opgave skulle bruges til at jeg kunne vise at jeg kunne mestre
+            de grundlæggende færdigheder i HTML og CSS.
+          </p>
         </div>
-        <!-- </div> -->
       </section>
       <section class="baggrund1">
-        <h2>Metode</h2>
-        <p>
-          Jeg opbyggede og stylede websitet med udleveret indhold.
-          <!-- I denne opgave blev vi introduceret til HTML og CSS.-->
-          Dette gjorde jeg ved brugt af HTML til indholdet og CSS til at lave
-          layout ud fra udleveret wireframes og layoutdiagram. Dette gjorde jeg
-          igennem HTML sectioner, div og classes. Ved brug af CSS definerede jeg
-          grid, layout samt design med farve og font-family.
-        </p>
         <div class="grid_1-1">
           <div>
-            <img src="img/wireframe_website.png" alt="" />
-            <figcaption>Wireframe</figcaption>
+            <h2>Metode</h2>
+            <p>
+              Jeg opbyggede og stylede websitet med udleveret indhold. Dette
+              gjorde jeg ved brugt af HTML til indholdet og CSS til at lave
+              layout ud fra udleveret wireframes og layoutdiagram.
+            </p>
+            <p>
+              HTML bliver brugt til skruktur igennem HTML sectioner, div og
+              classes og for at indsætte tekst og billeder. Ved brug af CSS
+              definerede jeg grid, layout samt design med farve, font-family
+              samt media quries for at gøre websitet responsivt.
+            </p>
+            <p>
+              I det efterfølegende projekter har jeg videre brugt HTML og CSS,
+              og udvidet mine færdigheder. Senere i Tema 4 i samspil med
+              JavaScript.
+            </p>
           </div>
-          <div>
-            <img src="img/layoutdiagram_website.png" alt="" />
-            <figcaption>Layoutdiagram</figcaption>
+          <div class="grid_1-1">
+            <div>
+              <img src="img/wireframe_website.png" alt="" />
+              <figcaption>Wireframe</figcaption>
+            </div>
+            <div>
+              <img src="img/layoutdiagram_website.png" alt="" />
+              <figcaption>Layoutdiagram</figcaption>
+            </div>
           </div>
         </div>
       </section>
-      <!-- <div class="baggrund1"> -->
-
-      <!-- <p opgave beskrivelse>
-          I opgave X var vores mål at lave et redesign for en forbedret
-          brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
-          hovedrolle og ansvarsområder], som jeg udførte [specifik måde med
-          specifikke værktøjer eller metoder] (færdighed). Det lærte mig
-          vigtigheden af [værktøj/metode], som jeg senere brugte i
-          Opgavebeskrivelse Portfolioeksamen Forår 2024 Side 2 af 3 [fremtidigt
-          projekt eller videreudvikling]. Udviklingsprocessen kan ses i
-          [illustrationer eller visualiseringer] i figur 1 (kompetence). Det
-          sværeste var [svar], som jeg derfor var ekstra opmærksom på at blive
-          bedre til i [øvelse/opgave/projekt] (link) sidst på semesteret.
-        </p> -->
-
-      <!-- <p>
-          Jeg opbyggede og stylede en hjemmeside med udleveret indhold. Ud fra
-          udleveret wireframes og Layoutdiagram, brugte jeg HTML og CSS, til at
-          opbygge og style hjemmesiden. I det efterfølegende projekter har jeg
-          videre brugt HTML og CSS, senere i tema 4 i samspil med JavaScript.
-          udførte testen på følgende måde [...] med følgende resultat [...], og
-          det gav anledning til følgende ændringer [...] i mit design
-          (færdighed). I det efterfølgende gruppeprojekt brugte vi igen
-          testmetoden X i forhold til at undersøge følgende [...] (kompetence).
-          Processen, som jeg gennemgik, foregik sådan: [beskriv]
-        </p> -->
-      <!-- <h4>HTML</h4>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
-          delectus vitae nisi recusandae, laudantium ut.
-        </p>
-        <img src="" alt="" />
-        <h4>CSS</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
-          repudiandae aut. Aspernatur ad esse qui?
-        </p>
-        <img src="" alt="" /> -->
-      <!-- </div> -->
       <section class="baggrund">
         <div class="grid_1-1">
           <div>
@@ -139,7 +102,7 @@
           </div>
           <div>
             <h4>Nye kompenancer</h4>
-            <ul>
+            <ul class="icon">
               <li>HTML</li>
               <li>CSS</li>
               <li>Figma</li>
