--- a/ommig.html
+++ b/ommig.html
@@ -18,11 +18,11 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Tema 2</a>
-          <a href="emnesite.html">Tema 3</a>
-          <a href="spil.html">Tema 4</a>
-          <a href="passion.html">Tema 5 opgave 1</a>
-          <a href="virksomhedsite.html">Tema 5 opgave 2</a>
+          <a href="website.html">Website</a>
+          <a href="emnesite.html">Emnesite</a>
+          <a href="spil.html">Spil</a>
+          <a href="passion.html">Passionsite</a>
+          <a href="virksomhedsite.html">Virksomhedsite</a>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
