--- a/emnesite.html
+++ b/emnesite.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon_io/site.webmanifest" />
     <script src="js/java.js"></script>
     <title>Emnesite</title>
   </head>
@@ -36,7 +54,7 @@
       <section class="baggrund">
         <h1>Emnesite</h1>
         <div class="baggrund2">
-          <h2>Tema</h2>
+          <!-- <h2>Tema</h2>
           <p>
             I Tema 3 blev vi introduceret til User Experience Design (UX), som
             er en central del af udviklingen af digitale brugergrænseflader
@@ -56,6 +74,21 @@
             research og design; moodborad, styletile mm. For derefter at teste
             sitet på både brugere, tænke-højt test, 5 sekunder test samt BERT og
             på hvordan vores site fungere med Lighthouse test.
+          </p> -->
+          <p>
+            I Tema 3 blev vi introduceret til User Experience Design (UX), som
+            er en central del af udviklingen af digitale brugergrænseflader
+            (UI). Dette tema gav en grundlæggende forståelse for samspillet
+            mellem brugere og brugergrænseflader og introducerede teorier,
+            værktøjer og metoder til research, design og test i digital
+            produktudvikling.
+          </p>
+          <p>
+            Med emnesite opgaven i Tema 3 var vores mål at lave et fuldendt
+            website, hvor vi var med gennem hele processen. Opgacen havde til
+            formål at give erfaring med udvalgte UX/UI-metoder og lære at
+            præsentere vores design- og udviklingsproces samt formidle research-
+            og testresultater til interessenter.
           </p>
         </div>
       </section>
@@ -89,7 +122,6 @@
       <section class="baggrund1">
         <div class="grid_1-1">
           <div>
-            <h3>Kodet site</h3>
             <p>
               Udfra min digitale prototype begyndte jeg at kode mit site med
               html og css. Html for at lave strukturen i sitet og css for at
@@ -130,8 +162,8 @@
               <li>Figma</li>
               <li>Idégenering</li>
               <li>Design</li>
-              <li>UX</li>
-              <li>UI</li>
+              <li>UX og UI</li>
+              <li>Bruger test</li>
             </ul>
           </div>
         </div>
