--- a/passion.html
+++ b/passion.html
@@ -35,7 +35,7 @@
     <main>
       <section class="baggrund">
         <h1>Passionsite</h1>
-        <div class="grid_1-1">
+        <div class="baggrund2">
           <div>
             <h2>Tema</h2>
             <p>
@@ -90,7 +90,7 @@
             <p>
               Efter at havde klippet videoen, ud fra de krav der var givet af
               lærene. Satte jeg websitet op ud fra det wireframe som var
-              udleveret af lærene her implementeret jeg videoen både dirkete på
+              udleveret af lærene her implementeret jeg videoen både direkte på
               sitet med HTML og som video fra Youtube. Derudover skulle jeg lave
               en LottieFile som en herosection. Lottiefile er lavet i
               Aftereffect og oploadet på Lottiefile og implementeret på siden
