--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -57,32 +57,48 @@
             og indeholde indholdsproduktioner i form af fx tekst, foto,
             LottieFiles og video. Dette var et gruppeprojekt. Vi var alle
             indover alle dele af opgaven, men jeg stod for kodningen af
-            indec.html og en del illutations arbejde i Illustrator.
+            index.html og omos.html samt en del illutations arbejdet i
+            Illustrator.
           </p>
         </div>
       </section>
       <section class="baggrund1">
         <div>
           <div>
-            <div>
-              <h3>Metode</h3>
-              <p>
-                Ud fra vores valgte website Klodshans, begynde vi at idéudvikle
-                på hvordan design af hjemmesiden skulle se ud. I denne del af
-                processen lavede vi moodboards og styletile. Samt research på
-                andre baby udstyrs websites, der er i branchen.
-              </p>
-              <p>
-                For at vise virksomheden bedste frem tog vi ud til Virksomheden
-                og optog video og tog billeder til sitet. Derudover brugte vi
-                tekst og billeder, der allerede var på sitet, samt vektorgrafik
-                som vi tegnede i Illustator.
-              </p>
-              <p></p>
-            </div>
-            <div>
-              <img src="" alt="" />
-              <img src="" alt="" />
+            <div class="grid_1-1">
+              <div>
+                <h3>Metode</h3>
+                <p>
+                  I starten af opgaven lavede vi et SCRUM over projektet, så vi
+                  vidste hvad vi skulle nå og hvornår.
+                </p>
+                <p>
+                  Ud fra vores valgte website Klodshans, begynde vi at
+                  idéudvikle på hvordan design af hjemmesiden skulle se ud. I
+                  denne del af processen lavede vi moodboards og styletile som
+                  vi lærte tilbage i Tema 3. Samt research på andre baby udstyrs
+                  websites, der er i branchen.
+                </p>
+                <p>
+                  For at vise virksomheden bedste frem tog vi ud til
+                  Virksomheden for at optage video og tage billeder til sitet.
+                  Derudover brugte vi tekst og billeder, der allerede var på
+                  sitet, samt vektorgrafik som vi tegnede i Illustator.
+                </p>
+                <p>
+                  Da vi skulle kode vores site, brugte vi GitHub for at hele
+                  gruppen kunne kode i samme mappe, og vi hele tiden kunne følge
+                  med i hvad de andre havde lavte.
+                </p>
+                <p>
+                  Til sidste i processen testede vi vores site med tænke-højt-
+                  og heurisk test, for at se hvordan brugerne opfattede sitet.
+                </p>
+              </div>
+              <div>
+                <img src="img/klodshans_gammel.webp" alt="" />
+                <img src="img/klodshans_ny.webp" alt="" />
+              </div>
             </div>
           </div>
         </div>
@@ -103,6 +119,8 @@
             <ul class="icon">
               <li>Gruppearbejde</li>
               <li>Redesign</li>
+              <li>SCRUM</li>
+              <li>GitHub</li>
             </ul>
           </div>
         </div>
