--- a/website.html
+++ b/website.html
@@ -37,8 +37,8 @@
         <h1>Website</h1>
         <!-- <div class="flex"> -->
         <div class="baggrund2">
-          <h2>Tema</h2>
-          <p>
+          <!-- <h2>Tema</h2> -->
+          <!-- <p>
             I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
             færdigheder brugte vi til først at lave mobilsite, for derefter lav
             en respontiv website som også fungerede som studiestarts prøve.
@@ -53,6 +53,19 @@
             indhold (billede og tekst) til at lave et færdigt responsivt design.
             Denne opgave skulle bruges til at jeg kunne vise at jeg kunne mestre
             de grundlæggende færdigheder i HTML og CSS.
+          </p> -->
+          <p>
+            I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
+            færdigheder brugte vi til først at lave mobilsite, for derefter lav
+            en respontiv website som også fungerede som studiestarts prøve.
+            Derudover blev vi introduceret til de grundlæggende færdigheder i
+            grafisk opsætning af tekst og billeder i Figma, som vi brugte i Tema
+            3.
+          </p>
+          <p>
+            For at vise vores at vi mestre de grundlæggende HTML og CSS, skulle
+            vi kode et site ud fra udleveret wireframes, layoutdiagram samt
+            indhold (billede og tekst) til at lave et færdigt responsivt design.
           </p>
         </div>
       </section>
