--- a/passion.html
+++ b/passion.html
@@ -55,42 +55,21 @@
         <h1>Passionsite</h1>
         <div class="baggrund2">
           <div>
-            <h2>Tema</h2>
             <p>
-              I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+              I Tema 5 fik vi grundlæggende indførsel i indholdsproduktion,
               herunder præproduktion, selve produktionen samt postproduktion. Vi
               benytter smartphonekameraer til optagelse af video og ekstern lyd
-              og anvender Premiere Pro til redigering. Dette er væsentligt for
-              at kunne lave mindre indholdsproduktioner selv, samt for bedre at
-              kunne kommunikere professionelt med kunder. Vi arbejde også med
-              animeret vektorgrafik (Lottiefiles). Vi bliv introduceret til
-              grundlæggende faglige begreber inden for indholdsproduktion, og vi
-              benyttede derudover de færdigheder, som vi havde fået i de
-              foregående temaer, til at redesigne en virksomhedshjemmeside.
+              og anvender Premiere Pro til redigering. Vi arbejde også med
+              animeret vektorgrafik (Lottiefiles).
             </p>
-          </div>
-          <div>
-            <h3>Opgave</h3>
             <p>
-              I denne opgave var vores mål at lære at forbedre og filme en video
-              ud fra xxxx metoden, som bruges for at få en mere dynamisk video
-              og spændene video. Deruover skulle vi lære at bruge PrimerePro,
-              After Effect samt LottieFile, som vi brugte i opgave 2 i Tema 5.
+              I passions opgaven var vores mål at lære at forberede og filme en
+              video ud fra 5-shot-sequence fortællemodellen, som bruges for at
+              få en mere dynamisk og spændene video. Vi lærte at bruge
+              PrimerePro til at redigere, After Effect til animation og
+              LottieFile som format, som vi brugte i virksomhedsside opgaven i
+              Tema 5.
             </p>
-
-            <!-- <p>
-              I opgave X var vores mål at lave et redesign for en forbedret
-              brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
-              hovedrolle og ansvarsområder], som jeg udførte [specifik måde med
-              specifikke værktøjer eller metoder] (færdighed). Det lærte mig
-              vigtigheden af [værktøj/metode], som jeg senere brugte i
-              Opgavebeskrivelse Portfolioeksamen Forår 2024 Side 2 af 3
-              [fremtidigt projekt eller videreudvikling]. Udviklingsprocessen
-              kan ses i [illustrationer eller visualiseringer] i figur 1
-              (kompetence). Det sværeste var [svar], som jeg derfor var ekstra
-              opmærksom på at blive bedre til i [øvelse/opgave/projekt] (link)
-              sidst på semesteret.
-            </p> -->
           </div>
         </div>
       </section>
