--- a/spil.html
+++ b/spil.html
@@ -54,28 +54,25 @@
       <section class="baggrund">
         <h1>Spil</h1>
         <div class="baggrund2">
-          <h2>Tema</h2>
           <p>
-            I dette tema blev vi introduceret til programmeringssproget
-            JavaScript, som kan bruges til at kode dynamiske websites. I dette
-            tema brugte vi JavaScript sammen med CSS-animationer til at skabe et
-            lille spil. Formålet med dette tema var, at vi begynder at arbejde
+            I Tema 4 blev vi introduceret til programmeringssproget JavaScript,
+            som kan bruges til at kode dynamiske websites. I dette tema brugte
+            vi JavaScript i samspil med CSS-animationer til at skabe et lille
+            spil. Formålet med dette tema var, at vi begynder at arbejde
             professionelt med formgivning af grafiske elementer. Vi analyserede
             spildesign og undersøgte, hvordan man engagerer brugere gennem teori
             og konventioner inden for UI-elementer, figurelementer,
-            baggrundsdesign og kompositionsteknikker. Vi udviklede vores eget
-            spildesign efter moderne konventioner og rentegner grafikken til
-            spillet i Adobe Illustrator. Gennem arbejdet med vores eget spil
-            lærer vi at arbejde med aktivitets- og statemachine-diagrammer, som
-            bruges til at planlægge det mere komplicerede interaktive flow.
+            baggrundsdesign og kompositionsteknikker.
           </p>
-
-          <h3>Opgave</h3>
           <p>
-            I denne opgave skulle vi lave et spil som skulle have et koncept og
-            en idé, som vi selv fandt frem til, og selv skulle designe alle
-            elementer og kode spillet helt fra bunden. Dette skulle gøre ved
-            brug af CSS-animation og JavaScript.
+            I Tema 4 opgaven skulle vi udvikle et spil som skulle have et
+            koncept og en idé, som vi selv fandt frem til. Vi designede
+            elementerne ud fra en selvvagt stil og kode spillet helt fra bunden.
+            Vi udviklede vores eget spildesign efter moderne konventioner og
+            rentegner grafikken til spillet i Adobe Illustrator. Gennem arbejdet
+            med vores eget spil lærer vi at arbejde med aktivitets- og
+            statemachine-diagrammer, som bruges til at planlægge det mere
+            komplicerede interaktive flow.
           </p>
         </div>
       </section>
