--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -55,28 +55,22 @@
       <section class="baggrund">
         <h1>Virksomhedsite</h1>
         <div class="baggrund2">
-          <h2>Tema</h2>
           <p>
-            I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+            I Tema 5 fik vi grundlæggende indførsel i indholdsproduktion,
             herunder præproduktion, selve produktionen samt postproduktion. Vi
             benytter smartphonekameraer til optagelse af video og ekstern lyd og
-            anvender Premiere Pro til redigering. Dette er væsentligt for at
-            kunne lave mindre indholdsproduktioner selv, samt for bedre at kunne
-            kommunikere professionelt med kunder. Vi arbejde også med animeret
-            vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
-            faglige begreber inden for indholdsproduktion, og vi benyttede
-            derudover de færdigheder, som vi havde fået i de foregående temaer,
-            til at redesigne en virksomhedshjemmeside.
+            anvender Premiere Pro til redigering. Vi arbejde også med animeret
+            vektorgrafik (Lottiefiles).
           </p>
-          <h3>Opgave</h3>
           <p>
-            I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
-            virksomheds website. Redesignet skulle munde ud i et kodet website
-            og indeholde indholdsproduktioner i form af fx tekst, foto,
-            LottieFiles og video. Dette var et gruppeprojekt. Vi var alle
-            indover alle dele af opgaven, men jeg stod for kodningen af
-            index.html og omos.html samt en del illutations arbejdet i
-            Illustrator.
+            I Virksomhedsite opgave skulle vi prøve kræfter med at redesigne en
+            selvvalgt virksomheds website. I redesignet benyttede vi de
+            færdigheder, som vi havde fået i de foregående temaer. Redesignet
+            skulle munde ud i et kodet website og indeholde indholdsproduktioner
+            i form af fx tekst, foto, LottieFiles og video. Dette var et
+            gruppeprojekt. Vi var alle indover de fleste dele af opgaven, men
+            jeg stod for kodningen af index.html og omos.html samt en del
+            illutations arbejdet i Illustrator.
           </p>
         </div>
       </section>
@@ -111,6 +105,7 @@
                 <p>
                   Til sidste i processen testede vi vores site med tænke-højt-
                   og heurisk test, for at se hvordan brugerne opfattede sitet.
+                  Vi lavede også en Lighthouse test for at se hvordan sitet
                 </p>
               </div>
               <div>
