--- a/website.html
+++ b/website.html
@@ -53,25 +53,7 @@
     <main>
       <section class="baggrund">
         <h1>Website</h1>
-        <!-- <div class="flex"> -->
         <div class="baggrund2">
-          <!-- <h2>Tema</h2> -->
-          <!-- <p>
-            I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
-            færdigheder brugte vi til først at lave mobilsite, for derefter lav
-            en respontiv website som også fungerede som studiestarts prøve.
-            Derudover blev vi introduceret til de grundlæggende færdigheder i
-            grafisk opsætning af tekst og billeder i Figma, som vi brugte i Tema
-            3.
-          </p>
-
-          <h3>Opgave</h3>
-          <p>
-            I website opgaven fik jeg udleveret wireframes, layoutdiagram samt
-            indhold (billede og tekst) til at lave et færdigt responsivt design.
-            Denne opgave skulle bruges til at jeg kunne vise at jeg kunne mestre
-            de grundlæggende færdigheder i HTML og CSS.
-          </p> -->
           <p>
             I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
             færdigheder brugte vi til først at lave mobilsite, for derefter lav
@@ -94,7 +76,10 @@
             <p>
               Jeg opbyggede og stylede websitet med udleveret indhold. Dette
               gjorde jeg ved brugt af HTML til indholdet og CSS til at lave
-              layout ud fra udleveret wireframes og layoutdiagram.
+              layout ud fra udleveret wireframes og layoutdiagram. Wireframes og
+              layoutdiagram er med til at hjælpe programøren til hvordan sitet
+              skal opbygges, og gør det derudover mere overskueligt når man skal
+              gå fra prototype til kodet site.
             </p>
             <p>
               HTML bliver brugt til skruktur igennem HTML sectioner, div og
@@ -108,15 +93,12 @@
               JavaScript.
             </p>
           </div>
-          <div class="grid_1-1">
-            <div>
-              <img src="img/wireframe_website.png" alt="" />
-              <figcaption>Wireframe</figcaption>
-            </div>
-            <div>
-              <img src="img/layoutdiagram_website.png" alt="" />
-              <figcaption>Layoutdiagram</figcaption>
-            </div>
+          <div>
+            <img src="img/wireframe_website.png" alt="" />
+            <figcaption>Wireframe</figcaption>
+
+            <img src="img/layoutdiagram_website.png" alt="" />
+            <figcaption>Layoutdiagram</figcaption>
           </div>
         </div>
       </section>
