--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Forside</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -45,7 +45,7 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <a href="ommig.html" class="ommig">Om mig</a>
+      <a class="ommigindex" href="ommig.html">Om mig</a>
     </header>
     <main>
       <img id="mobil" src="img/forsidem.webp" alt="Portfolio illustation" />
